k8s_practice_yml/istio_conf/istio-egre/service-entry.yaml
# VirtualService for tibcouat.kotak.com

apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: tibco-api-gateway-vs
  namespace: istio-egress
spec:
  gateways:
  - mwf-egress-gateway
  hosts:
  - tibcouat.kotak.com
  http:
  - match:
    - port: 10268
    route:
    - destination:
        host: tibcouat.kotak.com
        port:
          number: 10268

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: tibco-apis
  namespace: mwf-services
spec:
  hosts:
  - tibcouat.kotak.com
  ports:
  - number: 10268
    name: http-10268
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL


---
